[tool.poetry]
name = "repl_python3_PoliteSameSmalltalk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.0"
pyautogui = "^0.9.52"
psutil = "^5.7.3"
speedtest-cli = "^2.1.2"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
